--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <td>Recursos Humanos</td>
                         <td>Administración</td>
                         <td>1005</td>
-                        <td><a class="email-link" href="mailto:abigail@puntual.mx">abigail@puntual.mx</a></td>
+                        <td><a class="email-link" href="mailto:rh@jarmedical.com">rh@jarmedical.com</a></td>
                     </tr>
                 </tbody>
                 <tbody>
