--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <td>Almacén</td>
               <td><span class="badge bg-dark">1003</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:fernando.camacho@jarmedical.com"
                   >fernando.camacho@jarmedical.com</a
                 >
               </td>
@@ -139,7 +139,7 @@
               <td>Administración</td>
               <td><span class="badge bg-dark">1004</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:ana.sanchez@jarmedical.com"
                   >ana.sanchez@jarmedical.com</a
                 >
               </td>
@@ -150,7 +150,7 @@
               <td>Administración</td>
               <td><span class="badge bg-dark">1005</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:rh@jarmedical.com"
                   >rh@jarmedical.com</a
                 >
               </td>
@@ -161,7 +161,7 @@
               <td>Administración</td>
               <td><span class="badge bg-dark">1006</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:pmoreno@jarmedical.com"
                   >pmoreno@jarmedical.com</a
                 >
               </td>
@@ -172,7 +172,7 @@
               <td>Administración</td>
               <td><span class="badge bg-dark">1007</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:veronica.frias@jarmedical.com"
                   >veronica.frias@jarmedical.com</a
                 >
               </td>
@@ -183,7 +183,7 @@
               <td>Almacén</td>
               <td><span class="badge bg-dark">1008</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
+                <a class="email-link" href="mailto:almacenmty@jarmedical.com"
                   >almacenmty@jarmedical.com</a
                 >
               </td>
@@ -194,8 +194,8 @@
               <td>Almacén</td>
               <td><span class="badge bg-dark">1009</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
-                  >distribucion@jarmedical.com</a
+                <a class="email-link" href="mailto:mercadotecnia@jarmedical.com"
+                  >mercadotecnia@jarmedical.com</a
                 >
               </td>
             </tr>
@@ -205,8 +205,8 @@
               <td>Administración</td>
               <td><span class="badge bg-dark">1010</span></td>
               <td>
-                <a class="email-link" href="mailto:distribucion@jarmedical.com"
-                  >distribucion@jarmedical.com</a
+                <a class="email-link" href="mailto:alepaezs@jarmedical.com"
+                  >alepaezs@jarmedical.com</a
                 >
               </td>
             </tr>
@@ -215,12 +215,12 @@
               <td>---</td>
               <td>---</td>
               <td><span class="badge bg-dark">1011</span></td>
-              <td><a class="email-link" href="mailto:#">#</a></td>
+              <td><a class="email-link" href="#">#</a></td>
             </tr>
             <tr>
               <td>Emilio Viveros</td>
               <td>Gerente de Ventas</td>
-              <td>Almacén</td>
+              <td>Ventas</td>
               <td><span class="badge bg-dark">1012</span></td>
               <td>
                 <a
