--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <tr>
               <td>Nayeli Hernández</td>
               <td>Coorda. de Marketing</td>
-              <td>Almacén</td>
+              <td>Administración</td>
               <td><span class="badge bg-dark">1009</span></td>
               <td>
                 <a class="email-link" href="mailto:mercadotecnia@jarmedical.com"
